--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
@@ -122,7 +122,7 @@
                  Visibility="Collapsed"
                  Padding="5,0,30,0"
                  Style="{StaticResource PrimaryTextBoxStyle}"   
-                 Text="{Binding Password, ElementName=HiddenPasswordTextBox}" 
+                 Text="{Binding Password, ElementName=HiddenPasswordTextBox, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
                  TextChanged="KindaPassword_TextChanged"/>
 
         <ToggleButton x:Name="ShowPasswordToggleButton"
