--- a/PasswordManagerMainWindow/MainWindow/Styles/SettingsStyles.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Styles/SettingsStyles.xaml
@@ -235,9 +235,7 @@
                                     </Storyboard>
                                 </BeginStoryboard>
                             </Trigger.EnterActions>
-
                             <Trigger.ExitActions>
-
                                 <BeginStoryboard>
                                     <Storyboard>
                                         <DoubleAnimation  Duration="0:0:0.3" To="-10" From ="10" Storyboard.TargetName="frontRectMovement" Storyboard.TargetProperty="X"/>
@@ -262,4 +260,10 @@
 
         </Style.Triggers>
     </Style>
+    <Style x:Key="SettingTextBox" TargetType="TextBox" BasedOn="{StaticResource PrimaryTextBoxStyle}">
+        <Setter Property="Width" Value="190"/>
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Foreground" Value="{DynamicResource TextColor}"/>
+    </Style>
+    
 </ResourceDictionary>
