--- a/PasswordManagerMainWindow/MainWindow/Pages/SettingsPage.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/SettingsPage.xaml
@@ -78,7 +78,7 @@
             </ListViewItem>
             <ListViewItem x:Name="PasswordLengthSetting" Style="{StaticResource SettingsListViewItem}" >
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{x:Static res:Resources.TraySettingHeader}" Style="{StaticResource SettingHeaderStyle}"/>
+                    <TextBlock Text="{x:Static res:Resources.PasswordLengthSettingHeader}" Style="{StaticResource SettingHeaderStyle}"/>
                     <TextBox Style="{StaticResource SettingTextBox}" Name="PasswordLengthSettingTextBox" TextChanged="PasswordLengthSettingTextBox_TextChanged" />
                 </StackPanel>
             </ListViewItem>
