--- a/PasswordManagerMainWindow/MainWindow/Styles/SettingsStyles.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Styles/SettingsStyles.xaml
@@ -35,6 +35,7 @@
         <Setter Property="Width" Value="700"/>
         <Setter Property="FontFamily" Value="Global Sans Serif"/>
         <Setter Property="Foreground" Value="{DynamicResource TextColor}"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
 
     </Style>
 
