--- a/PasswordManagerMainWindow/MainWindow/Pages/HomePage.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/HomePage.xaml
@@ -86,7 +86,7 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="{x:Static res:Resources.DataGridResource}" Width="400" Binding="{Binding Path= Resource}">
+                <DataGridTextColumn Header="{x:Static res:Resources.DataGridResource}" Width="400" Binding="{Binding Path= Name}">
                     <DataGridTextColumn.CellStyle>
                         <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
                             <EventSetter Event="PreviewMouseDoubleClick" Handler="CopyCellText">
