--- a/PasswordManagerMainWindow/MainWindow/Pages/AccountPage.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/AccountPage.xaml
@@ -4,15 +4,38 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PasswordManager.MainWindow.Pages"
+      xmlns:res="clr-namespace:PasswordManager.Properties"
       mc:Ignorable="d" 
       Width="1550.4"
       Height="700"
       Title="Account"
-      ShowsNavigationUI="False">
+      ShowsNavigationUI="False"
+      Background="{DynamicResource MainColor}"
+      Foreground="{DynamicResource TextColor}"
+      RenderOptions.EdgeMode="Aliased"
+      UseLayoutRounding="True"
+      SnapsToDevicePixels="True"
+      >
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
 
-    
-        <Grid Background="NavajoWhite">
-        <TextBlock Text="Account" Foreground="White" FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <!--Separator-->
+            <RowDefinition Height="50"/>
+
+            <!--Separator-->
+
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="{x:Static res:Resources.AccountHeader}" Style="{StaticResource PageHeader}"/>
+        <!--<Button x:Name="C" Content="erve" Grid.Column="2" Click="C_Click"/>-->
+        
+
     </Grid>
     
 </Page>
