--- a/PasswordManagerMainWindow/MainWindow/Styles/FormStyles.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Styles/FormStyles.xaml
@@ -59,7 +59,7 @@
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource TextBoxStyle.Static.BorderBrush}"/>
+        <Setter Property="Foreground" Value="{DynamicResource TextColor}"/>
     </Style>
 
     <Style x:Key="PasswordCompexityRectangleStyle" TargetType="{x:Type Rectangle}">
