--- a/PasswordManagerMainWindow/MainWindow/Styles/MainStyles.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Styles/MainStyles.xaml
@@ -159,4 +159,41 @@
         <Setter Property="FontFamily" Value="Global Sans Serif"/>
         <Setter Property="FontSize" Value="20"/>
     </Style>
+
+    <SolidColorBrush x:Key="SettingsListViewStyle.Background" Color="{DynamicResource SettingsListView.Background}"/>
+
+    <Style TargetType="{x:Type ListView}" x:Key="SettingsListView">
+
+        <Setter Property="Background" Value="{DynamicResource SettingsListViewStyle.Background}"/>
+        <Setter Property= "ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
+        <Setter Property="BorderThickness" Value="0"/>
+
+
+    </Style>
+
+    <SolidColorBrush x:Key="SettingsListViewItemStyle.Static.Background" Color="{DynamicResource SettingsListViewItem.Static.Background}"/>
+    <Style TargetType="{x:Type ListViewItem}" x:Key="SettingsListViewItem" >
+        <Setter Property="Focusable" Value="False"/>
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                    <Grid Background="{TemplateBinding Background}">
+                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalAlignment}"/>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="SettingHeaderStyle" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Width" Value="700"/>
+        <Setter Property="FontFamily" Value="Global Sans Serif"/>
+        <Setter Property="Foreground" Value="{DynamicResource TextColor}"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+
+    </Style>
+
 </ResourceDictionary>
