--- a/PasswordManagerMainWindow/MainWindow/Styles/SettingsStyles.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Styles/SettingsStyles.xaml
@@ -3,41 +3,6 @@
                     xmlns:Themes="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
                     >
 
-    <SolidColorBrush x:Key="SettingsListViewStyle.Background" Color="{DynamicResource SettingsListView.Background}"/>
-
-    <Style TargetType="{x:Type ListView}" x:Key="SettingsListView">
-
-        <Setter Property="Background" Value="{DynamicResource SettingsListViewStyle.Background}"/>
-        <Setter Property= "ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
-        <Setter Property="BorderThickness" Value="0"/>
-
-
-    </Style>
-
-    <SolidColorBrush x:Key="SettingsListViewItemStyle.Static.Background" Color="{DynamicResource SettingsListViewItem.Static.Background}"/>
-    <Style TargetType="{x:Type ListViewItem}" x:Key="SettingsListViewItem" >
-        <Setter Property="Focusable" Value="False"/>
-        <Setter Property="Height" Value="50"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ListViewItem}">
-                    <Grid Background="{TemplateBinding Background}">
-                        <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalAlignment}"/>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style x:Key="SettingHeaderStyle" TargetType="{x:Type TextBlock}">
-        <Setter Property="FontSize" Value="16"/>
-        <Setter Property="Width" Value="700"/>
-        <Setter Property="FontFamily" Value="Global Sans Serif"/>
-        <Setter Property="Foreground" Value="{DynamicResource TextColor}"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-
-    </Style>
 
 
     <Style x:Key="FocusVisual">
@@ -261,10 +226,42 @@
 
         </Style.Triggers>
     </Style>
-    <Style x:Key="SettingTextBox" TargetType="TextBox" BasedOn="{StaticResource PrimaryTextBoxStyle}">
-        <Setter Property="Width" Value="190"/>
-        <Setter Property="Height" Value="30"/>
-        <Setter Property="Foreground" Value="{DynamicResource TextColor}"/>
+    <Style x:Key="SettingTextBox" TargetType="TextBox">
+        <Style.Setters>
+            <Setter Property="CaretBrush" Value="{DynamicResource TextColor}"/>
+            <Setter Property="OverridesDefaultStyle" Value="True"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <Border x:Name="border" BorderThickness="2" 
+                                CornerRadius="5" Background="{DynamicResource TextBoxStyle.Static.Border.Background}" 
+                                BorderBrush="{DynamicResource TextBoxStyle.Static.Border.BorderBrush}">
+                            <ScrollViewer x:Name="PART_ContentHost" Padding="{TemplateBinding Padding}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource TextBoxStyle.IsMouseOver.Border.BorderBrush}"/>
+                            </Trigger>
+                            <Trigger Property="IsFocused" Value="True">
+                                <Setter Property="BorderBrush" TargetName="border" Value="{DynamicResource TextBoxStyle.IsFocused.Border.BorderBrush}"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource TextBoxStyle.IsEnabledFalse.BorderBrush}"/>
+                                <Setter TargetName="border" Property="Background" Value="{DynamicResource TextBoxStyle.IsEnabledFalse.Background}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Width" Value="190"/>
+            <Setter Property="Height" Value="30"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="FontFamily" Value="Global Sans Serif"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Foreground" Value="{DynamicResource TextColor}"/>
+        </Style.Setters>
     </Style>
     
 </ResourceDictionary>
