--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/Login.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/Login.xaml
@@ -103,7 +103,7 @@
                                         Grid.Column="1"                                       
                                         Height="40"           
                                         Visibility="Visible"
-                                        Password="{Binding Text, ElementName=RevealedPasswordTextBox, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                                        Password="{Binding Text, ElementName=RevealedPasswordTextBox}"/>
 
         <TextBox x:Name="RevealedPasswordTextBox"  
                  Grid.Row="9" 
@@ -112,7 +112,7 @@
                  Visibility="Collapsed"
                  Padding="5,0,30,0"
                  Style="{StaticResource PrimaryTextBoxStyle}"   
-                 Text="{Binding Password, ElementName=HiddenPasswordTextBox, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                 Text="{Binding Password, ElementName=HiddenPasswordTextBox}" 
                  TextChanged="RevealedPassword_TextChanged"/>
 
         <ToggleButton x:Name="ShowPasswordToggleButton"
