--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
@@ -113,7 +113,7 @@
                                         Grid.Column="1" 
                                         Height="40"                
                                         Visibility="Visible"
-                                        Password="{Binding Text, ElementName=RevealedPasswordTextBox, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                                        Password="{Binding Text, ElementName=RevealedPasswordTextBox}"/>
 
         <TextBox x:Name="RevealedPasswordTextBox" 
                  Grid.Row="9" 
@@ -122,7 +122,7 @@
                  Visibility="Collapsed"
                  Padding="5,0,30,0"
                  Style="{StaticResource PrimaryTextBoxStyle}"   
-                 Text="{Binding Password, ElementName=HiddenPasswordTextBox, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}" 
+                 Text="{Binding Password, ElementName=HiddenPasswordTextBox}" 
                  TextChanged="KindaPassword_TextChanged"/>
 
         <ToggleButton x:Name="ShowPasswordToggleButton"
