--- a/PasswordManagerMainWindow/MainWindow/Pages/AccountPage.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/AccountPage.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PasswordManager.MainWindow.Pages"
       xmlns:res="clr-namespace:PasswordManager.Properties"
+      
       mc:Ignorable="d" 
       Width="1550.4"
       Height="700"
@@ -34,8 +35,206 @@
         </Grid.RowDefinitions>
         <TextBlock Text="{x:Static res:Resources.AccountHeader}" Style="{StaticResource PageHeader}"/>
         <!--<Button x:Name="C" Content="erve" Grid.Column="2" Click="C_Click"/>-->
-        
+        <ListView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Width="900" Name="SettingsList" Style="{StaticResource PrimaryListView}" DataContext="{Binding ElementName=_this}">
+            <ListViewItem  Style="{StaticResource PrimaryListViewItem}" >
+                <Grid>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                    
+                    <TextBlock Text="{x:Static res:Resources.AccountEmail}" Style="{StaticResource PrimaryListViewHeader}" Width="150"/>
+                        <TextBlock x:Name="EmailTextBlock" Style="{StaticResource PrimaryListViewHeader}"  Width="Auto" />
+                    </StackPanel>
+                    <Button x:Name="ChangeEmailButton" Style="{StaticResource AccountPrimaryButton}" Content="{x:Static res:Resources.AccountEdit}" HorizontalAlignment="Right"/>
+                </Grid>
+            </ListViewItem>
+            <ListViewItem  Style="{StaticResource PrimaryListViewItem}" >
+                <Grid>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <TextBlock Text="{x:Static res:Resources.AccountPassword}" Style="{StaticResource PrimaryListViewHeader}" Width="150"/>
+                        <TextBlock x:Name="Password" Text="●●●●●●●●●●●" Style="{StaticResource PrimaryListViewHeader}" Width="Auto" />
+                    </StackPanel>
+                    <Button x:Name="ChangePasswordButton" Style="{StaticResource AccountPrimaryButton}" Content="{x:Static res:Resources.AccountEdit}" HorizontalAlignment="Right"/>
+                </Grid>
+            </ListViewItem>
+            <ListViewItem  Style="{StaticResource PrimaryListViewItem}" >
+                <Grid>
+                    <TextBlock Text="{x:Static res:Resources.LogOut}" Style="{StaticResource PrimaryListViewHeader}" HorizontalAlignment="Left"/>
+                    <Button x:Name="LogOutButton" Style="{StaticResource AccountPrimaryButton}" Content="{x:Static res:Resources.AccountLogOut}" HorizontalAlignment="Right"/>
+                </Grid>
+            </ListViewItem>
+        </ListView>
+        <Grid  x:Name="ShadowEffectAccountPage" Height="700" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Grid.RowSpan="5" Style="{StaticResource Shadow}"  />
+        <Grid Visibility="Visible"
+            x:Name="ChangeEmailForm" Height="600" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource OverlayFormStyle}" Margin="0,0,0,104.2" >
+            <Grid.RenderTransform>
+                <ScaleTransform CenterX="250" CenterY="300" x:Name="FormScailing"/>
+            </Grid.RenderTransform>
 
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="85"/>
+                <ColumnDefinition Width="320"/>
+                <ColumnDefinition Width="85"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="35"/>
+
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="10"/>
+
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="10"/>
+
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="10"/>
+
+                <RowDefinition Height="60"/>
+
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="120"/>
+            </Grid.RowDefinitions>
+            <TextBox Name="IdTextBox" Visibility="Collapsed"/>
+            <TextBlock
+                x:Name="FormHeader"
+                Text="" 
+                   Grid.Row="1" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="28" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   Height="33" />
+
+            <TextBlock Text="{x:Static res:Resources.FormSecondaryHeader}" 
+                   Grid.Row="2" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   Grid.ColumnSpan="2" 
+                   Height="17" 
+                   />
+
+            <TextBlock Text="{x:Static res:Resources.FormRecource}" 
+                   Grid.Row="4" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   />
+
+            <TextBox x:Name="ResourceTextBox" 
+                 Grid.Row="5" 
+                 Grid.Column="1"
+                 BorderThickness="2"                 
+                
+                 Style="{StaticResource TextBoxStyle}" 
+                
+                 Height="40"  
+                 />
+
+            <TextBlock Text="{x:Static res:Resources.FormLogin}" 
+                   Grid.Row="7" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   />
+
+            <TextBox x:Name="LoginTextBox" 
+                 Grid.Row="8" 
+                 Grid.Column="1"
+                 BorderThickness="2"                 
+                
+                 Style="{StaticResource TextBoxStyle}" 
+                
+                 Height="40"  
+                 />
+            <TextBlock Text="{x:Static res:Resources.FormPassword}" 
+                   Grid.Row="10" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   />
+
+            <TextBox x:Name="HiddenPasswordTextBox" 
+                 Grid.Row="11" 
+                 Grid.Column="1"
+                 BorderThickness="2"                 
+                     GotFocus="HiddenPasswordTextBox_GotFocus"
+                     LostFocus="HiddenPasswordTextBox_LostFocus"
+                 Style="{StaticResource TextBoxStyle}"                
+                 Height="40" TextChanged="HiddenPasswordTextBox_TextChanged"  
+                 />
+
+            <Button x:Name="SuggestPassword" Panel.ZIndex="1" Content="{x:Static res:Resources.FormSuggestPassword}"  Height="30" Width="320" Grid.Column="1" Grid.Row="11" Grid.RowSpan="3" Style="{StaticResource SuggestPassword}" Click="SuggestPassword_Click"/>
+
+            <StackPanel Grid.Row="13" 
+                    Grid.Column="1">
+                <DockPanel x:Name="PasswordComplexityPanel">
+                    <Rectangle x:Name="VeryWeakPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"
+                           Margin="2,0"/>
+                    <Rectangle x:Name="WeakPasswordRectangle"
+                           Margin="6,0" 
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                    <Rectangle x:Name="NormalPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                    <Rectangle x:Name="StrongPasswordRectangle"
+                           Margin="6,0" 
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                    <Rectangle x:Name="VeryStrongPasswordRectangle"
+                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
+                </DockPanel>
+
+                <TextBlock x:Name="PasswordComplexityTextBlock"
+                       TextWrapping="Wrap" 
+                       Text=""
+                       HorizontalAlignment="Center"
+                       Margin="0,5,0,0"
+                       FontSize="14"
+                       Width="205" 
+                       TextAlignment="Center"/>
+            </StackPanel>
+            <TextBlock x:Name="AddEditFormErrorTextBlock" 
+                   Grid.Row="13" 
+                   Grid.Column="1"
+                       Style="{StaticResource AddEditFormErrorTextBlockStyle}"/>
+
+            <Button x:Name="AddEditFormSubmitButton"
+                Grid.Column="1"
+                Grid.Row="14"
+                Content="{x:Static res:Resources.FormSubmit}"
+                Width="160"
+                Height="50"  
+                Style="{StaticResource SubmitButtonStyle}" 
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                    Click="AddEditFormSubmitButton_Click"
+                />
+            <Button Grid.Column="1"
+                Name="CloseEditAddForm"
+                Grid.Row="14" Content="{x:Static res:Resources.FormCancel}"
+                            Style="{StaticResource CancelButtonStyle}"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                            Click="CloseForm_Click"
+                            />
+        </Grid>
     </Grid>
     
 </Page>
