--- a/PasswordManagerMainWindow/MainWindow/Pages/SettingsPage.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/SettingsPage.xaml
@@ -34,10 +34,10 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Text="{x:Static res:Resources.SettingsHeader}" Style="{StaticResource PageHeader}" />
-        <ListView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Width="900" Name="SettingsList" Style="{StaticResource SettingsListView}">
-            <ListViewItem x:Name="LanguageSetting" Style="{StaticResource SettingsListViewItem}" >
+        <ListView Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3" Width="900" Name="SettingsList" Style="{StaticResource PrimaryListView}">
+            <ListViewItem x:Name="LanguageSetting" Style="{StaticResource PrimaryListViewItem}" >
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{x:Static res:Resources.LanguageSettingHeader}" Style="{StaticResource SettingHeaderStyle}"/>
+                    <TextBlock Text="{x:Static res:Resources.LanguageSettingHeader}" Style="{StaticResource PrimaryListViewHeader}"/>
                     <ComboBox Name="LanguageSelector" 
                               Style="{DynamicResource SettingComboBoxStyle}">
                         <ComboBoxItem Name="LanguageSystem" Style="{StaticResource SettingComboBoxItemStyle}">
@@ -55,9 +55,9 @@
                     </ComboBox>
                 </StackPanel>
             </ListViewItem>
-            <ListViewItem x:Name="ThemeSetting" Style="{StaticResource SettingsListViewItem}" >
+            <ListViewItem x:Name="ThemeSetting" Style="{StaticResource PrimaryListViewItem}" >
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{x:Static res:Resources.ThemeSettingHeader}" Style="{StaticResource SettingHeaderStyle}"/>
+                    <TextBlock Text="{x:Static res:Resources.ThemeSettingHeader}" Style="{StaticResource PrimaryListViewHeader}"/>
                     <ComboBox Name="ThemeSelector" 
                               Style="{DynamicResource SettingComboBoxStyle}">
                         <ComboBoxItem  Name="SystemTheme" Style="{StaticResource SettingComboBoxItemStyle}">
@@ -72,17 +72,17 @@
                     </ComboBox>
                 </StackPanel>
             </ListViewItem>
-            <ListViewItem x:Name="TraySetting" Style="{StaticResource SettingsListViewItem}" >
+            <ListViewItem x:Name="TraySetting" Style="{StaticResource PrimaryListViewItem}" >
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{x:Static res:Resources.TraySettingHeader}" Style="{StaticResource SettingHeaderStyle}"/>
+                    <TextBlock Text="{x:Static res:Resources.TraySettingHeader}" Style="{StaticResource PrimaryListViewHeader}"/>
                     <ToggleButton Name ="TrayToggleButton" 
                                   HorizontalAlignment="Right" 
                                   Style="{StaticResource SettingToggleButton}"/>
                 </StackPanel>
             </ListViewItem>
-            <ListViewItem x:Name="PasswordLengthSetting" Style="{StaticResource SettingsListViewItem}" >
+            <ListViewItem x:Name="PasswordLengthSetting" Style="{StaticResource PrimaryListViewItem}" >
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{x:Static res:Resources.PasswordLengthSettingHeader}" Style="{StaticResource SettingHeaderStyle}"/>
+                    <TextBlock Text="{x:Static res:Resources.PasswordLengthSettingHeader}" Style="{StaticResource PrimaryListViewHeader}"/>
                     <TextBox Name="PasswordGenerateLengthSettingTextBox" 
                              Style="{StaticResource SettingTextBox}"/>
                 </StackPanel>
