--- a/PasswordManagerMainWindow/MainWindow/Styles/AccountStyles.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Styles/AccountStyles.xaml
@@ -1,4 +1,54 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
+
+
+    <SolidColorBrush x:Key="AccountPrimaryButtonStyle.Static.Background" Color="{DynamicResource AccountPrimaryButton.Static.Background}"/>
+    <SolidColorBrush x:Key="AccountPrimaryButtonStyle.IsPressed.Background" Color="{DynamicResource AccountPrimaryButton.IsPressed.Background}"/>
+    <SolidColorBrush x:Key="AccountPrimaryButtonStyle.IsMouseOver.Background" Color="{DynamicResource AccountPrimaryButton.IsMouseOver.Background}"/>
+    <SolidColorBrush x:Key="AccountPrimaryButtonStyle.IsEnabledFalse.Background" Color="{DynamicResource AccountPrimaryButton.IsEnabledFalse.Background}"/>
+    <SolidColorBrush x:Key="AccountPrimaryButtonStyle.Text.Foreground" Color="{DynamicResource AccountPrimaryButton.Text.Foreground}"/>
+
+    <Style x:Key="AccountPrimaryButton" TargetType="{x:Type Button}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border
+                            x:Name="border"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            
+                            Background="{TemplateBinding Background}"
+                            Height="{TemplateBinding Height}"
+                            Width="{TemplateBinding Width}"
+                            CornerRadius="5"
+                            BorderThickness="0">
+                        <TextBlock Text="{TemplateBinding Property=Content}"
+                                       VerticalAlignment="Center"
+                                       HorizontalAlignment="Center"
+                                       FontFamily="Global Sans Serif"
+                                       Foreground="{DynamicResource AccountPrimaryButtonStyle.Text.Foreground}"
+                                       FontSize="16"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+
+        </Setter>
+        <Setter Property="Background" Value="{DynamicResource AccountPrimaryButtonStyle.Static.Background}"/>
+        <Setter Property="Width" Value="130"/>
+        
+        <Setter Property="Height" Value="30"/>
+
+
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Cursor" Value="Hand"/>
+                <Setter Property="Background" Value="{DynamicResource AccountPrimaryButtonStyle.IsMouseOver.Background}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="{DynamicResource AccountPrimaryButtonStyle.IsPressed.Background}"/>
+            </Trigger>
+        </Style.Triggers>
+
+    </Style>
 </ResourceDictionary>
