--- a/PasswordManagerMainWindow/MainWindow/Styles/SettingsStyles.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Styles/SettingsStyles.xaml
@@ -69,7 +69,7 @@
             </Grid.ColumnDefinitions>
             <Popup x:Name="PART_Popup" AllowsTransparency="true" Grid.ColumnSpan="2" IsOpen="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" Margin="1" PopupAnimation="{DynamicResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}" Placement="Bottom">
                 <Themes:SystemDropShadowChrome x:Name="shadow" Color="Transparent" MaxHeight="{TemplateBinding MaxDropDownHeight}" MinWidth="{Binding ActualWidth, ElementName=templateRoot}">
-                    <Border x:Name="dropDownBorder" Background="{DynamicResource SettingsListViewStyle.Background}"  BorderThickness="2,0,2,2" CornerRadius="0,0,5,5" Padding="0,0,0,5">
+                    <Border x:Name="dropDownBorder" Background="{DynamicResource PrimaryListViewStyle.Background}"  BorderThickness="2,0,2,2" CornerRadius="0,0,5,5" Padding="0,0,0,5">
                         <ScrollViewer x:Name="DropDownScrollViewer">
                             <Grid x:Name="grid" RenderOptions.ClearTypeHint="Enabled">
                                 <Canvas x:Name="canvas" HorizontalAlignment="Left" Height="0" VerticalAlignment="Top" Width="0">
