--- a/PasswordManagerMainWindow/MainWindow/Themes/LightTheme.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Themes/LightTheme.xaml
@@ -99,8 +99,8 @@
     <ImageSource x:Key="ClosedEye">/MainWindow/Assets/closed_eye.png</ImageSource>
     <ImageSource x:Key="OpenEye">/MainWindow/Assets/eye.png</ImageSource>
 
-    <Color x:Key="SettingsListView.Background">White</Color>
-    <Color x:Key="SettingsListViewItem.Static.Background">White</Color>
+    <Color x:Key="PrimaryListView.Background">White</Color>
+    <Color x:Key="PrimaryListViewItem.Static.Background">White</Color>
 
     <Color x:Key="SettingComboBox.Background">White</Color>
     <Color x:Key="SettingComboBox.BorderBrush.Static">LightGray</Color>
@@ -113,4 +113,10 @@
     <Color x:Key="SettingToggleButton.BackRectangle.Background.Unchecked">#d5d5d6</Color>
     <Color x:Key="SettingToggleButton.BackRectangle.Background.Checked">#7289da</Color>
     <Color x:Key="SettingToggleButton.FrontRectangle.Background">White</Color>
+    
+    <Color x:Key="AccountPrimaryButton.Static.Background" >#7289da</Color>
+    <Color x:Key="AccountPrimaryButton.IsMouseOver.Background" >#506099</Color>
+    <Color x:Key="AccountPrimaryButton.IsPressed.Background" >#445283</Color>
+    <Color x:Key="AccountPrimaryButton.IsEnabledFalse.Background" >#99aab5</Color>
+    <Color x:Key="AccountPrimaryButton.Text.Foreground" >White</Color>
 </ResourceDictionary>
