--- a/PasswordManagerMainWindow/MainWindow/Pages/AccountPage.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/AccountPage.xaml
@@ -43,10 +43,10 @@
                     <TextBlock Text="{x:Static res:Resources.AccountEmail}" Style="{StaticResource PrimaryListViewHeader}" Width="150"/>
                         <TextBlock x:Name="EmailTextBlock" Style="{StaticResource PrimaryListViewHeader}"  Width="Auto" />
                     </StackPanel>
-                    <Button x:Name="ChangeEmailButton" Style="{StaticResource AccountPrimaryButton}" Content="{x:Static res:Resources.AccountEdit}" HorizontalAlignment="Right"/>
+                    <Button x:Name="ChangeEmailButton" Click="ChangeEmailButton_Click" Style="{StaticResource AccountPrimaryButton}" Content="{x:Static res:Resources.AccountEdit}" HorizontalAlignment="Right"/>
                 </Grid>
             </ListViewItem>
-            <ListViewItem  Style="{StaticResource PrimaryListViewItem}" >
+            <!--<ListViewItem  Style="{StaticResource PrimaryListViewItem}" >
                 <Grid>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                         <TextBlock Text="{x:Static res:Resources.AccountPassword}" Style="{StaticResource PrimaryListViewHeader}" Width="150"/>
@@ -54,19 +54,19 @@
                     </StackPanel>
                     <Button x:Name="ChangePasswordButton" Style="{StaticResource AccountPrimaryButton}" Content="{x:Static res:Resources.AccountEdit}" HorizontalAlignment="Right"/>
                 </Grid>
-            </ListViewItem>
+            </ListViewItem>-->
             <ListViewItem  Style="{StaticResource PrimaryListViewItem}" >
                 <Grid>
                     <TextBlock Text="{x:Static res:Resources.LogOut}" Style="{StaticResource PrimaryListViewHeader}" HorizontalAlignment="Left"/>
-                    <Button x:Name="LogOutButton" Style="{StaticResource AccountPrimaryButton}" Content="{x:Static res:Resources.AccountLogOut}" HorizontalAlignment="Right"/>
+                    <Button x:Name="LogOutButton" Style="{StaticResource AccountLogOutButton}" Click="LogOutButton_Click" Content="{x:Static res:Resources.AccountLogOut}" HorizontalAlignment="Right"/>
                 </Grid>
             </ListViewItem>
         </ListView>
         <Grid  x:Name="ShadowEffectAccountPage" Height="700" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Grid.RowSpan="5" Style="{StaticResource Shadow}"  />
-        <Grid Visibility="Visible"
-            x:Name="ChangeEmailForm" Height="600" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource OverlayFormStyle}" Margin="0,0,0,104.2" >
+        <Grid
+            x:Name="ChangeEmailForm" Height="300" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource OverlayFormStyle}" Margin="0,0,0,104.2" >
             <Grid.RenderTransform>
-                <ScaleTransform CenterX="250" CenterY="300" x:Name="FormScailing"/>
+                <ScaleTransform CenterX="250" CenterY="150" x:Name="FormScailing"/>
             </Grid.RenderTransform>
 
             <Grid.ColumnDefinitions>
@@ -82,25 +82,14 @@
 
                 <RowDefinition Height="30"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="10"/>
-
                 <RowDefinition Height="30"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="10"/>
-
-                <RowDefinition Height="30"/>
-                <RowDefinition Height="50"/>
-                <RowDefinition Height="10"/>
-
-                <RowDefinition Height="60"/>
 
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="120"/>
+                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
-            <TextBox Name="IdTextBox" Visibility="Collapsed"/>
             <TextBlock
-                x:Name="FormHeader"
-                Text="" 
+               
+                Text="{x:Static res:Resources.ChangeEmailFormHeader}" 
                    Grid.Row="1" 
                    Grid.Column="1"
                    HorizontalAlignment="Left" 
@@ -122,7 +111,7 @@
                    Height="17" 
                    />
 
-            <TextBlock Text="{x:Static res:Resources.FormRecource}" 
+            <TextBlock Text="{x:Static res:Resources.ChangeEmailNewEmail}" 
                    Grid.Row="4" 
                    Grid.Column="1"
                    HorizontalAlignment="Left" 
@@ -132,7 +121,7 @@
                    FontWeight="Bold" 
                    />
 
-            <TextBox x:Name="ResourceTextBox" 
+            <TextBox x:Name="NewEmailTextBox" 
                  Grid.Row="5" 
                  Grid.Column="1"
                  BorderThickness="2"                 
@@ -141,9 +130,82 @@
                 
                  Height="40"  
                  />
+            <TextBlock x:Name="ChangeEmailFormErrorTextBlock" 
+                   Grid.Row="6" 
+                   Grid.Column="1"
+                       Style="{StaticResource FormErrorTextBlockStyle}"/>
 
-            <TextBlock Text="{x:Static res:Resources.FormLogin}" 
-                   Grid.Row="7" 
+            <Button x:Name="ChangeEmailFormSubmitButton"
+                Grid.Column="1"
+                Grid.Row="7"
+                Content="{x:Static res:Resources.FormSubmit}"
+                Width="160"
+                Height="50"  
+                Style="{StaticResource SubmitButtonStyle}" 
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Center"
+                    Click="ChangeEmailFormSubmitButton_Click"
+                />
+            <Button Grid.Column="1"
+                Name="CloseChangeEmailForm"
+                Grid.Row="7" Content="{x:Static res:Resources.FormCancel}"
+                            Style="{StaticResource CancelButtonStyle}"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Center"
+                    Click="CloseForm"
+                    />
+            
+        </Grid>
+        <Grid
+            x:Name="ConfirmEmailChangeForm" Height="300" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource OverlayFormStyle}" Margin="0,0,0,104.2" >
+            <Grid.RenderTransform>
+                <ScaleTransform CenterX="250" CenterY="150"/>
+            </Grid.RenderTransform>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="85"/>
+                <ColumnDefinition Width="320"/>
+                <ColumnDefinition Width="85"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="35"/>
+
+                <RowDefinition Height="30"/>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="30"/>
+
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="20"/>
+            </Grid.RowDefinitions>
+            <TextBlock
+                
+                Text="{x:Static res:Resources.ConfirmEmailChangeFormHeader}" 
+                   Grid.Row="1" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="28" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   Height="33" />
+
+            <TextBlock Text="{x:Static res:Resources.ConfirmEmailChangeFormHint}" 
+                   Grid.Row="2" 
+                   Grid.Column="1"
+                   HorizontalAlignment="Left" 
+                   VerticalAlignment="Center" 
+                   FontSize="14" 
+                   FontFamily="Global Sans Serif" 
+                   FontWeight="Bold" 
+                   Grid.ColumnSpan="2" 
+                   Height="17" 
+                   />
+
+            <TextBlock Text="{x:Static res:Resources.ConfirmEmailChangeVerificationCode}" 
+                   Grid.Row="4" 
                    Grid.Column="1"
                    HorizontalAlignment="Left" 
                    VerticalAlignment="Center" 
@@ -152,8 +214,8 @@
                    FontWeight="Bold" 
                    />
 
-            <TextBox x:Name="LoginTextBox" 
-                 Grid.Row="8" 
+            <TextBox x:Name="ConfirmEmailChangeCode" 
+                 Grid.Row="5" 
                  Grid.Column="1"
                  BorderThickness="2"                 
                 
@@ -161,75 +223,32 @@
                 
                  Height="40"  
                  />
-            <TextBlock Text="{x:Static res:Resources.FormPassword}" 
-                   Grid.Row="10" 
+            <TextBlock x:Name="ConfirmEmailChangeFormErrorTextBlock" 
+                   Grid.Row="6" 
                    Grid.Column="1"
-                   HorizontalAlignment="Left" 
-                   VerticalAlignment="Center" 
-                   FontSize="14" 
-                   FontFamily="Global Sans Serif" 
-                   FontWeight="Bold" 
-                   />
+                       Style="{StaticResource FormErrorTextBlockStyle}"/>
 
-            <TextBox x:Name="HiddenPasswordTextBox" 
-                 Grid.Row="11" 
-                 Grid.Column="1"
-                 BorderThickness="2"                 
-                    
-                 Style="{StaticResource TextBoxStyle}"                
-                 Height="40" 
-                 />
-            <StackPanel Grid.Row="13" 
-                    Grid.Column="1">
-                <DockPanel x:Name="PasswordComplexityPanel">
-                    <Rectangle x:Name="VeryWeakPasswordRectangle"
-                           Style="{StaticResource PasswordCompexityRectangleStyle}"
-                           Margin="2,0"/>
-                    <Rectangle x:Name="WeakPasswordRectangle"
-                           Margin="6,0" 
-                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
-                    <Rectangle x:Name="NormalPasswordRectangle"
-                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
-                    <Rectangle x:Name="StrongPasswordRectangle"
-                           Margin="6,0" 
-                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
-                    <Rectangle x:Name="VeryStrongPasswordRectangle"
-                           Style="{StaticResource PasswordCompexityRectangleStyle}"/>
-                </DockPanel>
-
-                <TextBlock x:Name="PasswordComplexityTextBlock"
-                       TextWrapping="Wrap" 
-                       Text=""
-                       HorizontalAlignment="Center"
-                       Margin="0,5,0,0"
-                       FontSize="14"
-                       Width="205" 
-                       TextAlignment="Center"/>
-            </StackPanel>
-            <TextBlock x:Name="AddEditFormErrorTextBlock" 
-                   Grid.Row="13" 
-                   Grid.Column="1"
-                       Style="{StaticResource AddEditFormErrorTextBlockStyle}"/>
-
-            <Button x:Name="AddEditFormSubmitButton"
+            <Button x:Name="ConfirmEmailChangeFormSubmitButton"
                 Grid.Column="1"
-                Grid.Row="14"
+                Grid.Row="7"
                 Content="{x:Static res:Resources.FormSubmit}"
                 Width="160"
                 Height="50"  
                 Style="{StaticResource SubmitButtonStyle}" 
                             HorizontalAlignment="Right"
                             VerticalAlignment="Center"
+                   Click="ConfirmEmailChangeFormSubmitButton_Click"
                     
                 />
             <Button Grid.Column="1"
-                Name="CloseEditAddForm"
-                Grid.Row="14" Content="{x:Static res:Resources.FormCancel}"
+                Name="CloseConfirmEmailChangeForm"
+                Grid.Row="7" Content="{x:Static res:Resources.FormCancel}"
                             Style="{StaticResource CancelButtonStyle}"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
-                           
-                            />
+                     Click="CloseForm"
+                    />
+
         </Grid>
     </Grid>
     
