--- a/PasswordManagerMainWindow/MainWindow/Pages/HomePage.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/HomePage.xaml
@@ -141,7 +141,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Grid  x:Name="ShadowEffectHomePage" Height="700"   Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Grid.RowSpan="5" Style="{StaticResource Shadow}"  />
-        <Grid x:Name="AddEditForm" Height="600" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource OverlayFormStyle}" Margin="0,0,0,104.2" >
+        <Grid x:Name="AddEditForm"  Height="600" Width="500" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Grid.RowSpan="5" Style="{StaticResource OverlayFormStyle}" Margin="0,0,0,104.2" >
             <Grid.RenderTransform>
                 <ScaleTransform CenterX="250" CenterY="300" x:Name="FormScailing"/>
             </Grid.RenderTransform>
@@ -290,7 +290,7 @@
             <TextBlock x:Name="AddEditFormErrorTextBlock" 
                    Grid.Row="13" 
                    Grid.Column="1"
-                       Style="{StaticResource AddEditFormErrorTextBlockStyle}"/>
+                       Style="{StaticResource FormErrorTextBlockStyle}" VerticalAlignment="Bottom"/>
 
             <Button x:Name="AddEditFormSubmitButton"
                 Grid.Column="1"
